Add solution exercise 2 part 2 - count sentences

--- a/02-18-17_application_real_data.ipynb
+++ b/02-18-17_application_real_data.ipynb
@@ -371,13 +371,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " **Note**: Here I break the paragraph so it's not a long line of code. If we look th output of `repr(first_paragraph)` you will notice more `\\n`. Don't worry, we will strip the out anyways. "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
@@ -386,19 +379,7 @@
    "outputs": [],
    "source": [
     "first_paragraph = \"\"\"\n",
-    "In the waning days of President Barack Obama’s administration, he and his wife, Michelle, hosted a farewell party,\n",
-    "the full import of which no one could then grasp. It was late October, Friday the 21st, and the president had spent\n",
-    "many of the previous weeks, as he would spend the two subsequent weeks, campaigning for the Democratic presidential\n",
-    "nominee, Hillary Clinton. Things were looking up. Polls in the crucial states of Virginia and Pennsylvania showed \n",
-    "Clinton with solid advantages. The formidable GOP strongholds of Georgia and Texas were said to be under threat. \n",
-    "The moment seemed to buoy Obama. He had been light on his feet in these last few weeks, cracking jokes at the\n",
-    "expense of Republican opponents and laughing off hecklers. At a rally in Orlando on October 28, he greeted a\n",
-    "student who would be introducing him by dancing toward her and then noting that the song playing over the\n",
-    "loudspeakers—the Gap Band’s “Outstanding”—was older than she was. “This is classic!” he said. Then he flashed the\n",
-    "smile that had launched America’s first black presidency, and started dancing again. Three months still remained\n",
-    "before Inauguration Day, but staffers had already begun to count down the days. They did this with a mix of pride\n",
-    "and longing—like college seniors in early May. They had no sense of the world they were graduating into. None of\n",
-    "us did.\n",
+    "In the waning days of President Barack Obama’s administration, he and his wife, Michelle, hosted a farewell party, the full import of which no one could then grasp. It was late October, Friday the 21st, and the president had spent many of the previous weeks, as he would spend the two subsequent weeks, campaigning for the Democratic presidential nominee, Hillary Clinton. Things were looking up. Polls in the crucial states of Virginia and Pennsylvania showed Clinton with solid advantages. The formidable GOP strongholds of Georgia and Texas were said to be under threat. The moment seemed to buoy Obama. He had been light on his feet in these last few weeks, cracking jokes at the expense of Republican opponents and laughing off hecklers. At a rally in Orlando on October 28, he greeted a student who would be introducing him by dancing toward her and then noting that the song playing over the loudspeakers—the Gap Band’s “Outstanding”—was older than she was. “This is classic!” he said. Then he flashed the smile that had launched America’s first black presidency, and started dancing again. Three months still remained before Inauguration Day, but staffers had already begun to count down the days. They did this with a mix of pride and longing—like college seniors in early May. They had no sense of the world they were graduating into. None of us did.\n",
     "\"\"\""
    ]
   },
@@ -412,7 +393,7 @@
     {
      "data": {
       "text/plain": [
-       "\"'\\\\nIn the waning days of President Barack Obama’s administration, he and his wife, Michelle, hosted a farewell party,\\\\nthe full import of which no one could then grasp. It was late October, Friday the 21st, and the president had spent\\\\nmany of the previous weeks, as he would spend the two subsequent weeks, campaigning for the Democratic presidential\\\\nnominee, Hillary Clinton. Things were looking up. Polls in the crucial states of Virginia and Pennsylvania showed \\\\nClinton with solid advantages. The formidable GOP strongholds of Georgia and Texas were said to be under threat. \\\\nThe moment seemed to buoy Obama. He had been light on his feet in these last few weeks, cracking jokes at the\\\\nexpense of Republican opponents and laughing off hecklers. At a rally in Orlando on October 28, he greeted a\\\\nstudent who would be introducing him by dancing toward her and then noting that the song playing over the\\\\nloudspeakers—the Gap Band’s “Outstanding”—was older than she was. “This is classic!” he said. Then he flashed the\\\\nsmile that had launched America’s first black presidency, and started dancing again. Three months still remained\\\\nbefore Inauguration Day, but staffers had already begun to count down the days. They did this with a mix of pride\\\\nand longing—like college seniors in early May. They had no sense of the world they were graduating into. None of\\\\nus did.\\\\n'\""
+       "\"'\\\\nIn the waning days of President Barack Obama’s administration, he and his wife, Michelle, hosted a farewell party, the full import of which no one could then grasp. It was late October, Friday the 21st, and the president had spent many of the previous weeks, as he would spend the two subsequent weeks, campaigning for the Democratic presidential nominee, Hillary Clinton. Things were looking up. Polls in the crucial states of Virginia and Pennsylvania showed Clinton with solid advantages. The formidable GOP strongholds of Georgia and Texas were said to be under threat. The moment seemed to buoy Obama. He had been light on his feet in these last few weeks, cracking jokes at the expense of Republican opponents and laughing off hecklers. At a rally in Orlando on October 28, he greeted a student who would be introducing him by dancing toward her and then noting that the song playing over the loudspeakers—the Gap Band’s “Outstanding”—was older than she was. “This is classic!” he said. Then he flashed the smile that had launched America’s first black presidency, and started dancing again. Three months still remained before Inauguration Day, but staffers had already begun to count down the days. They did this with a mix of pride and longing—like college seniors in early May. They had no sense of the world they were graduating into. None of us did.\\\\n'\""
       ]
      },
      "execution_count": 17,
@@ -486,6 +467,7 @@
    },
    "outputs": [],
    "source": [
+    "#We want to keep first_paragraph without changes, so we create a copy and work with that.\n",
     "revised_paragraph = first_paragraph "
    ]
   },
@@ -514,19 +496,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "In the waning days of President Barack Obama’s administration, he and his wife, Michelle, hosted a farewell party,\n",
-      "the full import of which no one could then grasp. It was late October, Friday the 21st, and the president had spent\n",
-      "many of the previous weeks, as he would spend the two subsequent weeks, campaigning for the Democratic presidential\n",
-      "nominee, Hillary Clinton. Things were looking up. Polls in the crucial states of Virginia and Pennsylvania showed \n",
-      "Clinton with solid advantages. The formidable GOP strongholds of Georgia and Texas were said to be under threat. \n",
-      "The moment seemed to buoy Obama. He had been light on his feet in these last few weeks, cracking jokes at the\n",
-      "expense of Republican opponents and laughing off hecklers. At a rally in Orlando on October 28, he greeted a\n",
-      "student who would be introducing him by dancing toward her and then noting that the song playing over the\n",
-      "loudspeakers the Gap Band’s “Outstanding” was older than she was. “This is classic!” he said. Then he flashed the\n",
-      "smile that had launched America’s first black presidency, and started dancing again. Three months still remained\n",
-      "before Inauguration Day, but staffers had already begun to count down the days. They did this with a mix of pride\n",
-      "and longing like college seniors in early May. They had no sense of the world they were graduating into. None of\n",
-      "us did.\n",
+      "In the waning days of President Barack Obama’s administration, he and his wife, Michelle, hosted a farewell party, the full import of which no one could then grasp. It was late October, Friday the 21st, and the president had spent many of the previous weeks, as he would spend the two subsequent weeks, campaigning for the Democratic presidential nominee, Hillary Clinton. Things were looking up. Polls in the crucial states of Virginia and Pennsylvania showed Clinton with solid advantages. The formidable GOP strongholds of Georgia and Texas were said to be under threat. The moment seemed to buoy Obama. He had been light on his feet in these last few weeks, cracking jokes at the expense of Republican opponents and laughing off hecklers. At a rally in Orlando on October 28, he greeted a student who would be introducing him by dancing toward her and then noting that the song playing over the loudspeakers the Gap Band’s “Outstanding” was older than she was. “This is classic!” he said. Then he flashed the smile that had launched America’s first black presidency, and started dancing again. Three months still remained before Inauguration Day, but staffers had already begun to count down the days. They did this with a mix of pride and longing like college seniors in early May. They had no sense of the world they were graduating into. None of us did.\n",
       "\n"
      ]
     }
@@ -588,6 +558,130 @@
    ],
    "source": [
     "print('The amount of words in first_paragraph is: ', words)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How many sentences are in the first paragraph?\n",
+    "\n",
+    "To find the number of sentences we just need to split the initial paragraph by using the delimiter '.', but what happens when we have a '?' ? If there is one we should take that into account. We can replace them by '.' just for the counting, and after that we are good to go. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#We want to keep first_paragraph without changes, so we create a copy, in this case replacing ? by .\n",
+    "#and work with that copy.\n",
+    "sentence_paragraph = first_paragraph.replace('?', '.')\n",
+    "sentence_paragraph = sentence_paragraph.replace('\\n', '')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Split the paragraph into sentences\n",
+    "sentence_list = sentence_paragraph.split('.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['In the waning days of President Barack Obama’s administration, he and his wife, Michelle, hosted a farewell party, the full import of which no one could then grasp', ' It was late October, Friday the 21st, and the president had spent many of the previous weeks, as he would spend the two subsequent weeks, campaigning for the Democratic presidential nominee, Hillary Clinton', ' Things were looking up', ' Polls in the crucial states of Virginia and Pennsylvania showed Clinton with solid advantages', ' The formidable GOP strongholds of Georgia and Texas were said to be under threat', ' The moment seemed to buoy Obama', ' He had been light on his feet in these last few weeks, cracking jokes at the expense of Republican opponents and laughing off hecklers', ' At a rally in Orlando on October 28, he greeted a student who would be introducing him by dancing toward her and then noting that the song playing over the loudspeakers—the Gap Band’s “Outstanding”—was older than she was', ' “This is classic!” he said', ' Then he flashed the smile that had launched America’s first black presidency, and started dancing again', ' Three months still remained before Inauguration Day, but staffers had already begun to count down the days', ' They did this with a mix of pride and longing—like college seniors in early May', ' They had no sense of the world they were graduating into', ' None of us did', '']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sentence_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Let's remove the '' elements\n",
+    "for element in sentence_list:\n",
+    "    if element == '':\n",
+    "        sentence_list.remove(element) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['In the waning days of President Barack Obama’s administration, he and his wife, Michelle, hosted a farewell party, the full import of which no one could then grasp', ' It was late October, Friday the 21st, and the president had spent many of the previous weeks, as he would spend the two subsequent weeks, campaigning for the Democratic presidential nominee, Hillary Clinton', ' Things were looking up', ' Polls in the crucial states of Virginia and Pennsylvania showed Clinton with solid advantages', ' The formidable GOP strongholds of Georgia and Texas were said to be under threat', ' The moment seemed to buoy Obama', ' He had been light on his feet in these last few weeks, cracking jokes at the expense of Republican opponents and laughing off hecklers', ' At a rally in Orlando on October 28, he greeted a student who would be introducing him by dancing toward her and then noting that the song playing over the loudspeakers—the Gap Band’s “Outstanding”—was older than she was', ' “This is classic!” he said', ' Then he flashed the smile that had launched America’s first black presidency, and started dancing again', ' Three months still remained before Inauguration Day, but staffers had already begun to count down the days', ' They did this with a mix of pride and longing—like college seniors in early May', ' They had no sense of the world they were graduating into', ' None of us did']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sentence_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now our `sentences_list` just contains the sentences, let's use `len()` to count the amount of sentences."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sentences = len(sentence_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The amount of sentences in first_paragraph is:  14\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('The amount of sentences in first_paragraph is: ', sentences)"
    ]
   },
   {
