Rename variable for clarity

--- a/02-18-17_application_real_data.ipynb
+++ b/02-18-17_application_real_data.ipynb
@@ -520,7 +520,7 @@
    },
    "outputs": [],
    "source": [
-    "split_paragraph = revised_paragraph.split()"
+    "words_paragraph = revised_paragraph.split()"
    ]
   },
   {
@@ -538,7 +538,7 @@
    },
    "outputs": [],
    "source": [
-    "words = len(split_paragraph)"
+    "words = len(words_paragraph)"
    ]
   },
   {
@@ -682,6 +682,13 @@
    ],
    "source": [
     "print('The amount of sentences in first_paragraph is: ', sentences)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How many times is the word 'Obama' is in the first paragraph?"
    ]
   },
   {
