Change variable name again and add part 3 of exe2

--- a/02-18-17_application_real_data.ipynb
+++ b/02-18-17_application_real_data.ipynb
@@ -520,7 +520,7 @@
    },
    "outputs": [],
    "source": [
-    "words_paragraph = revised_paragraph.split()"
+    "words_list = revised_paragraph.split()"
    ]
   },
   {
@@ -538,7 +538,7 @@
    },
    "outputs": [],
    "source": [
-    "words = len(words_paragraph)"
+    "words = len(words_list)"
    ]
   },
   {
@@ -688,7 +688,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How many times is the word 'Obama' is in the first paragraph?"
+    "## How many times is the word 'Obama' is in the first paragraph?\n",
+    "\n",
+    "If you read the paragraph you might have notice that in some parts the Word Obama appears as \"Obama's\". We want to count that case; therefore, we will look for the string 'Obama' in wach word of the word_list. If the string is in the word we will add 1 to the variable obama_count (initialized in 0)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "obama_count = 0\n",
+    "for word in words_list:\n",
+    "    if 'Obama' in word:\n",
+    "        obama_count +=1\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(obama_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The amount of sentences in first_paragraph is:  14\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('The amount of sentences in first_paragraph is: ', sentences)"
    ]
   },
   {
