Add partial solution part3 exe3

--- a/02-18-17_application_real_data.ipynb
+++ b/02-18-17_application_real_data.ipynb
@@ -704,8 +704,7 @@
     "obama_count = 0\n",
     "for word in words_list:\n",
     "    if 'Obama' in word:\n",
-    "        obama_count +=1\n",
-    "    "
+    "        obama_count +=1    "
    ]
   },
   {
@@ -747,13 +746,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## If you remove all of the punctuation and lower case all text, how many words?\n",
+    "\n",
+    "This sounds like a tricky question. Why punctuation and lower case would affect word counting?\n",
+    "In the answer of part one we were asked to count the words and we did it. Lower case the whole text and removing punctuation won't affect that count. Therefore I would say the word count is the same than in the part one of the exercise. \n",
+    "\n",
+    "However, we can double check that and do it because coding in python is fun and we will learn more. Since in our revised_paragraph we've already removed the \"em dashes\", we will work with that paragraph.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lower case the revised_paragraph.\n",
+    "\n",
+    "We can do this in one line, because strings have a method called [`lower()`](https://www.tutorialspoint.com/python/string_lower.htm) that will do that for us. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#Lower case the whole paragraph\n",
+    "lower_paragraph = revised_paragraph.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "in the waning days of president barack obama’s administration, he and his wife, michelle, hosted a farewell party, the full import of which no one could then grasp. it was late october, friday the 21st, and the president had spent many of the previous weeks, as he would spend the two subsequent weeks, campaigning for the democratic presidential nominee, hillary clinton. things were looking up. polls in the crucial states of virginia and pennsylvania showed clinton with solid advantages. the formidable gop strongholds of georgia and texas were said to be under threat. the moment seemed to buoy obama. he had been light on his feet in these last few weeks, cracking jokes at the expense of republican opponents and laughing off hecklers. at a rally in orlando on october 28, he greeted a student who would be introducing him by dancing toward her and then noting that the song playing over the loudspeakers the gap band’s “outstanding” was older than she was. “this is classic!” he said. then he flashed the smile that had launched america’s first black presidency, and started dancing again. three months still remained before inauguration day, but staffers had already begun to count down the days. they did this with a mix of pride and longing like college seniors in early may. they had no sense of the world they were graduating into. none of us did.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lower_paragraph)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Remove punctuation. "
+   ]
   }
  ],
  "metadata": {
