Finish solution exe 2

--- a/02-18-17_application_real_data.ipynb
+++ b/02-18-17_application_real_data.ipynb
@@ -456,7 +456,7 @@
    "metadata": {},
    "source": [
     "As you can notice, the punctuation doesn't the word count because the symbols are attached to the previous word. However, the em dash '—' symbol links two words and that will affect the count, so let's replace them with a space so when we split by spaces it will do what we want.\n",
-    "If you don't have the em dash symbol in your keyword you can generate it by doing `Ctrl+Shift+u+2014`."
+    "If you don't have the em dash symbol in your keyword you can generate it by doing `(Ctrl+Shift+u)+2014`."
    ]
   },
   {
@@ -742,7 +742,7 @@
     }
    ],
    "source": [
-    "print('The amount of sentences in first_paragraph is: ', sentences)"
+    "print('The word Obama in first_paragraph appears : ', sentences)"
    ]
   },
   {
@@ -751,17 +751,17 @@
    "source": [
     "## If you remove all of the punctuation and lower case all text, how many words?\n",
     "\n",
-    "This sounds like a tricky question. Why punctuation and lower case would affect word counting?\n",
-    "In the answer of part one we were asked to count the words and we did it. Lower case the whole text and removing punctuation won't affect that count. Therefore I would say the word count is the same than in the part one of the exercise. \n",
+    "This sounds like a tricky question. Why lower case would affect word counting?\n",
+    "In the answer of part one we were asked to count the words and we did it. Lower case the whole text and removing punctuation won't affect that count. However, removing all type of punctuation might affect. For example, think in the cases where we have words like \"Obama's\" in this case the initial word-count counts that case as 1, even though we know that \"Obama's\" = \"Obama is\" which are 2 words.\n",
     "\n",
-    "However, we can double check that and do it because coding in python is fun and we will learn more. Since in our revised_paragraph we've already removed the \"em dashes\", we will work with that paragraph.\n"
+    "So, let's remove punctuation and count again. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Lower case the revised_paragraph.\n",
+    "### Lower case the first_paragraph.\n",
     "\n",
     "We can do this in one line, because strings have a method called [`lower()`](https://www.tutorialspoint.com/python/string_lower.htm) that will do that for us. "
    ]
@@ -775,7 +775,7 @@
    "outputs": [],
    "source": [
     "#Lower case the whole paragraph\n",
-    "lower_paragraph = revised_paragraph.lower()"
+    "lower_paragraph = first_paragraph.lower()"
    ]
   },
   {
@@ -790,7 +790,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "in the waning days of president barack obama’s administration, he and his wife, michelle, hosted a farewell party, the full import of which no one could then grasp. it was late october, friday the 21st, and the president had spent many of the previous weeks, as he would spend the two subsequent weeks, campaigning for the democratic presidential nominee, hillary clinton. things were looking up. polls in the crucial states of virginia and pennsylvania showed clinton with solid advantages. the formidable gop strongholds of georgia and texas were said to be under threat. the moment seemed to buoy obama. he had been light on his feet in these last few weeks, cracking jokes at the expense of republican opponents and laughing off hecklers. at a rally in orlando on october 28, he greeted a student who would be introducing him by dancing toward her and then noting that the song playing over the loudspeakers the gap band’s “outstanding” was older than she was. “this is classic!” he said. then he flashed the smile that had launched america’s first black presidency, and started dancing again. three months still remained before inauguration day, but staffers had already begun to count down the days. they did this with a mix of pride and longing like college seniors in early may. they had no sense of the world they were graduating into. none of us did.\n",
+      "in the waning days of president barack obama’s administration, he and his wife, michelle, hosted a farewell party, the full import of which no one could then grasp. it was late october, friday the 21st, and the president had spent many of the previous weeks, as he would spend the two subsequent weeks, campaigning for the democratic presidential nominee, hillary clinton. things were looking up. polls in the crucial states of virginia and pennsylvania showed clinton with solid advantages. the formidable gop strongholds of georgia and texas were said to be under threat. the moment seemed to buoy obama. he had been light on his feet in these last few weeks, cracking jokes at the expense of republican opponents and laughing off hecklers. at a rally in orlando on october 28, he greeted a student who would be introducing him by dancing toward her and then noting that the song playing over the loudspeakers—the gap band’s “outstanding”—was older than she was. “this is classic!” he said. then he flashed the smile that had launched america’s first black presidency, and started dancing again. three months still remained before inauguration day, but staffers had already begun to count down the days. they did this with a mix of pride and longing—like college seniors in early may. they had no sense of the world they were graduating into. none of us did.\n",
       "\n"
      ]
     }
@@ -803,14 +803,189 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Remove punctuation. "
+    "### Remove punctuation. \n",
+    "\n",
+    "To approach this exercise we will use some of the string constants available in python. Thanksfully, there is one that has all the punctuation ([string.punctuation](https://docs.python.org/3.1/library/string.html)). Once we have this string, we will do a for loop on the elements of that constant and every time we find one of those elements in our paragraph, we will replace it for a space (' '). \n",
+    "\n",
+    "Since "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#First we import the string constants available in python.  \n",
+    "import string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "!\"#$%&'()*+,-./:;<=>?@[\\]^_`{|}~\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Let's print the string punctuation.\n",
+    "print(string.punctuation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#loop in the character of string.punctuation and we replace the characters that appear\n",
+    "#in our lower_paragraph for a space. \n",
+    "for character in string.punctuation:\n",
+    "    lower_paragraph = lower_paragraph.replace(character, ' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "in the waning days of president barack obama’s administration  he and his wife  michelle  hosted a farewell party  the full import of which no one could then grasp  it was late october  friday the 21st  and the president had spent many of the previous weeks  as he would spend the two subsequent weeks  campaigning for the democratic presidential nominee  hillary clinton  things were looking up  polls in the crucial states of virginia and pennsylvania showed clinton with solid advantages  the formidable gop strongholds of georgia and texas were said to be under threat  the moment seemed to buoy obama  he had been light on his feet in these last few weeks  cracking jokes at the expense of republican opponents and laughing off hecklers  at a rally in orlando on october 28  he greeted a student who would be introducing him by dancing toward her and then noting that the song playing over the loudspeakers—the gap band’s “outstanding”—was older than she was  “this is classic ” he said  then he flashed the smile that had launched america’s first black presidency  and started dancing again  three months still remained before inauguration day  but staffers had already begun to count down the days  they did this with a mix of pride and longing—like college seniors in early may  they had no sense of the world they were graduating into  none of us did \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lower_paragraph)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It seems that our paragraph is not using the curly quation marks, single and double. Those are not in our strin.punctuation constant and the \"em dash\" either. Let's create another constant string with all the ramining characters we want to remove and take them out. We might want to add also the '\\n' symbol. \n",
+    "\n",
+    "Probably you don't have non straight quotation marks, but you can creat them using unicode:\n",
+    "\n",
+    "* ‘: `(Ctrl+Shift+u)+2018`\n",
+    "* ’: `(Ctrl+Shift+u)+2019`\n",
+    "* “: `(Ctrl+Shift+u)+201c`\n",
+    "* ”: `(Ctrl+Shift+u)+201d` \n",
+    "* —: `(Ctrl+Shift+u)+2014`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "more_punct = '’‘“”—\\n'\n",
+    "for character in more_punct:\n",
+    "    lower_paragraph = lower_paragraph.replace(character, ' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " in the waning days of president barack obama s administration  he and his wife  michelle  hosted a farewell party  the full import of which no one could then grasp  it was late october  friday the 21st  and the president had spent many of the previous weeks  as he would spend the two subsequent weeks  campaigning for the democratic presidential nominee  hillary clinton  things were looking up  polls in the crucial states of virginia and pennsylvania showed clinton with solid advantages  the formidable gop strongholds of georgia and texas were said to be under threat  the moment seemed to buoy obama  he had been light on his feet in these last few weeks  cracking jokes at the expense of republican opponents and laughing off hecklers  at a rally in orlando on october 28  he greeted a student who would be introducing him by dancing toward her and then noting that the song playing over the loudspeakers the gap band s  outstanding  was older than she was   this is classic   he said  then he flashed the smile that had launched america s first black presidency  and started dancing again  three months still remained before inauguration day  but staffers had already begun to count down the days  they did this with a mix of pride and longing like college seniors in early may  they had no sense of the world they were graduating into  none of us did  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lower_paragraph)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we removed all kind of punctuation, let's create our list and count the elements to know the amount of words. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "no_punctuation_list = lower_paragraph.split()\n",
+    "words_no_punctuation = len(no_punctuation_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The amount of words in the paragraph with no punctuation is:  235\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('The amount of words in the paragraph with no punctuation is: ', words_no_punctuation)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Printing all together:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "print('The amount of words in first_paragraph is: ', words)\n",
+    "print('The amount of sentences in first_paragraph is: ', sentences)\n"
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
