Save changes, solution exercise 2

--- a/02-18-17_application_real_data.ipynb
+++ b/02-18-17_application_real_data.ipynb
@@ -737,12 +737,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The amount of sentences in first_paragraph is:  14\n"
+      "The word Obama in first_paragraph appears 2 times.\n"
      ]
     }
    ],
    "source": [
-    "print('The word Obama in first_paragraph appears : ', sentences)"
+    "print('The word Obama in first_paragraph appears {} times.'.format(obama_count))"
    ]
   },
   {
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -971,14 +971,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The amount of words in first_paragraph is:  232\n",
+      "The amount of sentences in first_paragraph is:  14\n",
+      "The word Obama in first_paragraph appears 2 times.\n",
+      "The amount of words in the paragraph with no punctuation is:  235\n"
+     ]
+    }
+   ],
    "source": [
     "print('The amount of words in first_paragraph is: ', words)\n",
-    "print('The amount of sentences in first_paragraph is: ', sentences)\n"
+    "print('The amount of sentences in first_paragraph is: ', sentences)\n",
+    "print('The word Obama in first_paragraph appears {} times.'.format(obama_count))\n",
+    "print('The amount of words in the paragraph with no punctuation is: ', words_no_punctuation)"
    ]
   }
  ],
