Rename variable for clarity

--- a/02-18-17_application_real_data.ipynb
+++ b/02-18-17_application_real_data.ipynb
@@ -422,7 +422,7 @@
    },
    "outputs": [],
    "source": [
-    "split_paragraph = first_paragraph.split()"
+    "paragraph_list = first_paragraph.split()"
    ]
   },
   {
@@ -448,7 +448,7 @@
     }
    ],
    "source": [
-    "print(split_paragraph)"
+    "print(paragraph_list)"
    ]
   },
   {
